--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,18 +1,3 @@
-INHERIT: ./customized_mkdocs/base_mkdocs.yml
+INHERIT: qihang.mkdocs.yml
 
 site_name: Vocal
-
-site_url: https://qihang-zhang.github.io/Vocal
-
-plugins:
-  blog:
-    blog_dir: Vocal
-
-theme:
-  custom_dir: overrides
-  
-# Comments used to test Github Actions
-nav: 
-  - index.md
-  - Vocal: 
-    - index: Vocal/index.md
